--- a/snakegame.html
+++ b/snakegame.html
@@ -9,7 +9,10 @@
     <script defer src="snakegame.js "></script>
 </head>
 <body>
+    <div>
     <div id="score">0</div>
     <canvas id="snakeboard" width="400" height="400"></canvas> 
+    <button id="restart">Replay</button>
+    </div>
 </body>
 </html>
