--- a/snakegame.html
+++ b/snakegame.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link rel="stylesheet" href="snakegame.css" type="text/css">
-    <script defer src="snakegame.js "></script>
+    <link rel="stylesheet" href="CSS/snakegame.css" type="text/css">
+    <script defer src="JS/main.js"></script>
 </head>
 <body>
     <div>
